@@ -96,7 +96,7 @@ static VALUE zipruby_file_initialize(int argc, VALUE *argv, VALUE self) {
   rb_scan_args(argc, argv, "22", &archive,  &index, &flags, &stat_flags);
 
   if (!rb_obj_is_instance_of(archive, Archive)) {
-    rb_raise(rb_eTypeError, "wrong argument type %s (expected Zip::Archive)", rb_class2name(CLASS_OF(archive)));
+    rb_raise(rb_eTypeError, "wrong argument type %s (expected ZipRuby::Archive)", rb_class2name(CLASS_OF(archive)));
   }
 
   switch (TYPE(index)) {
