@@ -1,6 +1,6 @@
 Gem::Specification.new do |spec|
-  spec.name              = 'zipruby'
-  spec.version           = '0.3.6'
+  spec.name              = 'zipruby-compat'
+  spec.version           = '0.3.7'
   spec.summary           = 'Ruby bindings for libzip.'
   spec.files             = Dir.glob('ext/*.*') + %w(ext/extconf.rb README.txt zipruby.c LICENSE.libzip ChangeLog)
   spec.author            = 'winebarrel'
@@ -8,7 +8,7 @@ Gem::Specification.new do |spec|
   spec.homepage          = 'http://zipruby.rubyforge.org'
   spec.extensions        = 'ext/extconf.rb'
   spec.has_rdoc          = true
-  spec.rdoc_options      << '--title' << 'Zip/Ruby - Ruby bindings for libzip.'
+  spec.rdoc_options      << '--title' << 'Zip/Ruby-Compat - Ruby bindings for libzip.'
   spec.extra_rdoc_files  = %w(README.txt zipruby.c LICENSE.libzip ChangeLog)
-  spec.rubyforge_project = 'zipruby'
+  spec.rubyforge_project = 'zipruby-compat'
 end
